// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/FormButtons default 1`] = `
.c0 {
  position: fixed;
  top: 0;
  right: 0;
  z-index: 1000;
}

.c1 {
  padding: 12px;
  border: none;
  background: transparent;
  cursor: pointer;
  color: rgb(0,130,155);
  font-size: 30px;
}

.c1:disabled {
  color: rgb(65,178,180);
}

<div
  class="c0"
  data-testid="form-buttons"
>
  <button
    class="c1"
    data-testid="edit"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Components/FormButtons disabled 1`] = `
.c0 {
  position: fixed;
  top: 0;
  right: 0;
  z-index: 1000;
}

.c1 {
  padding: 12px;
  border: none;
  background: transparent;
  cursor: pointer;
  color: rgb(0,130,155);
  font-size: 30px;
}

.c1:disabled {
  color: rgb(65,178,180);
}

<div
  class="c0"
  data-testid="form-buttons"
>
  <button
    class="c1"
    data-testid="cancel"
    disabled=""
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </button>
  <button
    class="c1"
    data-testid="submit"
    disabled=""
    type="submit"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Components/FormButtons editing 1`] = `
.c0 {
  position: fixed;
  top: 0;
  right: 0;
  z-index: 1000;
}

.c1 {
  padding: 12px;
  border: none;
  background: transparent;
  cursor: pointer;
  color: rgb(0,130,155);
  font-size: 30px;
}

.c1:disabled {
  color: rgb(65,178,180);
}

<div
  class="c0"
  data-testid="form-buttons"
>
  <button
    class="c1"
    data-testid="cancel"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </button>
  <button
    class="c1"
    data-testid="submit"
    type="submit"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
      />
    </svg>
  </button>
</div>
`;
